# treadlink

./: AGENTS.md  CONTEXT-MAP.md  CONTRIBUTING.md  Cargo.toml  README.md  skills-lock.json
.cargo/: config.toml
.kiro/agents/: treadlink-dev.json
.kiro/settings/: lsp.json
.kiro/skills/domain-ble/: REFERENCE.md  SKILL.md
.kiro/skills/ftms-protocol/: REFERENCE.md  SKILL.md
.kiro/skills/rsc-protocol/: REFERENCE.md  SKILL.md
.kiro/skills/trouble-nrf-sdc/: REFERENCE.md  SKILL.md
.kiro/specs/ftms-rsc-bridge/: .config.kiro  design.md  requirements.md  tasks.md
.scratch/: old-workspace-cargo.toml
.scratch/old-bridge/: Cargo.toml  build.rs  memory.x
.scratch/old-bridge/.cargo/: config.toml
.scratch/old-bridge/src/: ble.rs  bridge.rs  main.rs  scan.rs
.scratch/old-protocol/: Cargo.toml
.scratch/old-protocol/src/: ble.rs  convert.rs  error.rs  ftms.rs  lib.rs  rsc.rs
.scratch/old-protocol/tests/: ble_property_tests.rs  ble_tests.rs
.scratch/treadlink-bridge/: PRD.md
.scratch/treadlink-bridge/issues/: 01-project-scaffold.md  02-ftms-scan-and-connect.md  03-ftms-data-parsing-and-conversion.md  04-rsc-peripheral-advertising.md  05-end-to-end-bridge.md  06-disconnect-handling-and-reconnection.md  07-led-status-feedback.md  08-garmin-ble-rsc-incompatibility.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
src/: central.rs  converter.rs  led.rs  main.rs  peripheral.rs  protocol.rs
tests/: converter_tests.rs
tests/pbt/: Cargo.toml
tests/pbt/src/: central.rs  converter.rs  lib.rs  peripheral.rs  protocol.rs
tests/pbt/tests/: central_pbt.rs  converter_pbt.rs  converter_tests.rs  peripheral_pbt.rs  peripheral_tests.rs  protocol_pbt.rs  protocol_tests.rs
